[gd_scene format=3 uid="uid://dtohbchdaimmh"]

[ext_resource type="Texture2D" uid="uid://ck1sgk47lvr8" path="res://Assets/Manager_anim1.png" id="1_5ydob"]
[ext_resource type="Script" uid="uid://ds3hnms1fbhy0" path="res://Scripts/jugador.gd" id="1_c1mnh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5nsjc"]
atlas = ExtResource("1_5ydob")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vc6x"]
atlas = ExtResource("1_5ydob")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1mnh"]
atlas = ExtResource("1_5ydob")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn1hq"]
atlas = ExtResource("1_5ydob")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0p7g"]
atlas = ExtResource("1_5ydob")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4xcq"]
atlas = ExtResource("1_5ydob")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw3ti"]
atlas = ExtResource("1_5ydob")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5nsjc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vc6x")
}],
"loop": true,
"name": &"crouch",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1mnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn1hq")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0p7g")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4xcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw3ti")
}],
"loop": true,
"name": &"taunt",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ydob"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c1mnh"]
radius = 3.0

[node name="Jugador" type="CharacterBody2D" unique_id=1102808260]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_c1mnh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=543786439]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_5nsjc")
animation = &"crouch"
autoplay = "default"

[node name="MostrarColision" type="ColorRect" parent="." unique_id=480931710]
unique_name_in_owner = true
visible = false
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0.7236748, 0.2925014, 0.15038094, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=18500305]
shape = SubResource("CircleShape2D_5ydob")

[node name="Colision" type="Area2D" parent="." unique_id=682000855]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colision" unique_id=674105788]
shape = SubResource("CircleShape2D_c1mnh")
debug_color = Color(0.88351303, 0.31464553, 0.30717278, 0.41960785)

[node name="OrigenDisparo" type="Marker2D" parent="." unique_id=1033599875]
unique_name_in_owner = true
position = Vector2(2, 0)

[node name="Timer" type="Timer" parent="." unique_id=1747375725]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
